--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Olá — Primeiro Projeto do Geovane Quinhone</h1>
-  <p id="info">Clique no console para ver a saída do script.</p>
-  <script src="script.js"></script>
+  <h1>Prova Git Action/h1>
 </body>
 </html>
